[gd_scene load_steps=25 format=3 uid="uid://dosulntiwpmvw"]

[ext_resource type="Script" path="res://objects/card.gd" id="1_8v1ch"]
[ext_resource type="Texture2D" uid="uid://dicq202oyt24d" path="res://sprites/card_bg_battle.png" id="2_jvxha"]
[ext_resource type="Texture2D" uid="uid://dd0mmnwesdund" path="res://sprites/card_images/missing_artwork.png" id="3_pvcx2"]
[ext_resource type="PackedScene" uid="uid://g7yv71p73utl" path="res://objects/attribute.tscn" id="4_a23ep"]
[ext_resource type="Texture2D" uid="uid://bmnyp650trfv7" path="res://sprites/rarity/rarity_common.png" id="5_3weow"]
[ext_resource type="Texture2D" uid="uid://cd8gb1b5tt6em" path="res://sprites/card_back.png" id="6_y577d"]
[ext_resource type="Script" path="res://objects/select_border.gd" id="7_x3kli"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3feu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qw08w"]
size = Vector2(800, 1200)

[sub_resource type="LabelSettings" id="LabelSettings_rdleq"]
font_size = 48
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_owst0"]
line_spacing = -12.0
font_size = 40
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_uis4s"]
line_spacing = -12.0
font_size = 40
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_fy67i"]
font_size = 48
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_ylnjb"]
font_size = 48
font_color = Color(0.545098, 0.972549, 0.976471, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_jti33"]
font_size = 48
font_color = Color(1, 1, 0.52549, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_guvnp"]
font_size = 48
font_color = Color(0.980392, 0.521569, 0.501961, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_hirw7"]
font_size = 48
font_color = Color(1, 1, 0.52549, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_arssg"]
font_size = 48
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_3ahw8"]
font_size = 48
font_color = Color(0.713726, 0.760784, 0.984314, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="Theme" id="Theme_b0mdc"]
default_font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_g0d37"]
font_size = 32
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_grgb1"]
font_size = 256
outline_size = 96
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oymet"]
font_size = 192
outline_size = 96
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd2rd"]
bg_color = Color(0.247059, 0.247059, 0.231373, 0.862745)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.741176, 0.741176, 0.741176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Card" type="Node2D"]
script = ExtResource("1_8v1ch")

[node name="Panel" type="Panel" parent="."]
offset_left = -401.0
offset_top = -601.0
offset_right = 399.0
offset_bottom = 601.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_f3feu")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_qw08w")

[node name="Content" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Content"]
texture = ExtResource("2_jvxha")

[node name="PictureBorder" type="Polygon2D" parent="Content"]
position = Vector2(0, -8)
color = Color(0.368627, 0.368627, 0.368627, 1)
polygon = PackedVector2Array(-365, -490, -365, 38, 364, 38, 364, -490)

[node name="Picture" type="Sprite2D" parent="Content"]
position = Vector2(0, -234)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_pvcx2")

[node name="Name" type="Label" parent="Content"]
offset_left = -360.0
offset_top = -575.0
offset_right = -39.0
offset_bottom = -508.0
text = "Card Name"
label_settings = SubResource("LabelSettings_rdleq")
vertical_alignment = 1

[node name="SmallName" type="Label" parent="Content"]
offset_left = -360.0
offset_top = -575.0
offset_right = -39.0
offset_bottom = -508.0
text = "Card Name"
label_settings = SubResource("LabelSettings_owst0")
vertical_alignment = 1

[node name="TwoLineName" type="Label" parent="Content"]
offset_left = -360.0
offset_top = -591.0
offset_right = -39.0
offset_bottom = -493.0
text = "Card Name
Line 2"
label_settings = SubResource("LabelSettings_uis4s")
vertical_alignment = 1

[node name="TypeBattle" type="Label" parent="Content"]
offset_left = 40.0
offset_top = -575.0
offset_right = 301.0
offset_bottom = -508.0
text = "Battle"
label_settings = SubResource("LabelSettings_fy67i")
horizontal_alignment = 2

[node name="TypeOther" type="Label" parent="Content"]
visible = false
offset_left = 104.0
offset_top = -575.0
offset_right = 365.0
offset_bottom = -508.0
text = "Battle"
label_settings = SubResource("LabelSettings_fy67i")
horizontal_alignment = 2

[node name="Attribute" parent="Content" instance=ExtResource("4_a23ep")]
position = Vector2(337, -541)
scale = Vector2(0.35, 0.35)

[node name="Stats" type="Node2D" parent="Content"]

[node name="HP" type="Label" parent="Content/Stats"]
offset_left = -360.0
offset_top = 43.0
offset_right = -213.0
offset_bottom = 110.0
text = "HP"
label_settings = SubResource("LabelSettings_ylnjb")

[node name="Value" type="Label" parent="Content/Stats/HP"]
layout_mode = 0
offset_left = 32.0
offset_right = 179.0
offset_bottom = 67.0
text = "0"
label_settings = SubResource("LabelSettings_jti33")
horizontal_alignment = 2

[node name="Attack" type="Label" parent="Content/Stats"]
offset_left = -104.0
offset_top = 43.0
offset_right = 43.0
offset_bottom = 110.0
text = "ATK"
label_settings = SubResource("LabelSettings_guvnp")

[node name="Value" type="Label" parent="Content/Stats/Attack"]
layout_mode = 0
offset_left = 32.0
offset_right = 179.0
offset_bottom = 67.0
text = "0"
label_settings = SubResource("LabelSettings_hirw7")
horizontal_alignment = 2

[node name="AttackType" type="Label" parent="Content/Stats"]
offset_left = 96.0
offset_top = 43.0
offset_right = 357.0
offset_bottom = 110.0
text = "Target"
label_settings = SubResource("LabelSettings_arssg")
horizontal_alignment = 2

[node name="Field" type="Label" parent="Content"]
offset_left = -360.0
offset_top = 141.0
offset_right = -213.0
offset_bottom = 208.0
text = "Field
"
label_settings = SubResource("LabelSettings_3ahw8")

[node name="Value1" parent="Content/Field" instance=ExtResource("4_a23ep")]
position = Vector2(160, 37)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Value2" parent="Content/Field" instance=ExtResource("4_a23ep")]
position = Vector2(224, 37)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Value3" parent="Content/Field" instance=ExtResource("4_a23ep")]
position = Vector2(288, 37)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Value4" parent="Content/Field" instance=ExtResource("4_a23ep")]
position = Vector2(352, 37)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Cost" type="Label" parent="Content"]
offset_left = 144.0
offset_top = 141.0
offset_right = 291.0
offset_bottom = 208.0
text = "Cost"
label_settings = SubResource("LabelSettings_3ahw8")
horizontal_alignment = 2

[node name="Value" type="Label" parent="Content/Cost"]
layout_mode = 0
offset_left = 64.0
offset_right = 211.0
offset_bottom = 67.0
text = "0"
label_settings = SubResource("LabelSettings_hirw7")
horizontal_alignment = 2

[node name="Text" type="RichTextLabel" parent="Content"]
offset_left = -353.0
offset_top = 264.0
offset_right = 354.0
offset_bottom = 525.0
mouse_filter = 2
theme = SubResource("Theme_b0mdc")
scroll_active = false

[node name="Rarity" type="Sprite2D" parent="Content"]
position = Vector2(311, 549)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_3weow")

[node name="SerialNumber" type="Label" parent="Content"]
offset_left = -363.0
offset_top = 524.0
offset_right = -247.0
offset_bottom = 569.0
text = "Serial #"
label_settings = SubResource("LabelSettings_g0d37")

[node name="Overlay" type="Node2D" parent="."]

[node name="EMark" type="Label" parent="Overlay"]
visible = false
offset_left = 185.0
offset_top = -535.0
offset_right = 471.0
offset_bottom = 163.0
text = "E"
label_settings = SubResource("LabelSettings_grgb1")

[node name="Downed" type="Label" parent="Overlay"]
visible = false
offset_left = -400.0
offset_top = -515.0
offset_right = 399.0
offset_bottom = 31.0
text = "DOWN"
label_settings = SubResource("LabelSettings_oymet")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip" type="Panel" parent="."]
visible = false
offset_left = 406.0
offset_top = 254.0
offset_right = 954.0
offset_bottom = 333.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bd2rd")

[node name="Text" type="RichTextLabel" parent="Tooltip"]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 546.0
offset_bottom = 68.0
theme = SubResource("Theme_b0mdc")
text = "This is for tooltips"
fit_content = true
scroll_active = false

[node name="Back" type="Sprite2D" parent="."]
texture = ExtResource("6_y577d")

[node name="SelectBorder" type="Line2D" parent="."]
visible = false
scale = Vector2(1.05, 1.05)
points = PackedVector2Array(-430, -630, -430, -420, -430, -210, -430, 0, -430, 210, -430, 420, -430, 630, -215, 630, 0, 630, 215, 630, 430, 630, 430, 420, 430, 210, 430, 0, 430, -210, 430, -420, 430, -630, 215, -630, 0, -630, -215, -630)
closed = true
width = 24.0
default_color = Color(0.827451, 0, 0, 1)
joint_mode = 2
antialiased = true
script = ExtResource("7_x3kli")

[node name="ValidBorder" type="Line2D" parent="."]
visible = false
scale = Vector2(1.05, 1.05)
points = PackedVector2Array(-430, -630, -430, -420, -430, -210, -430, 0, -430, 210, -430, 420, -430, 630, -215, 630, 0, 630, 215, 630, 430, 630, 430, 420, 430, 210, 430, 0, 430, -210, 430, -420, 430, -630, 215, -630, 0, -630, -215, -630)
closed = true
width = 24.0
default_color = Color(0, 0.447059, 0.690196, 1)
joint_mode = 2
antialiased = true
script = ExtResource("7_x3kli")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="meta_hover_ended" from="Content/Text" to="." method="_on_text_meta_hover_ended"]
[connection signal="meta_hover_started" from="Content/Text" to="." method="_on_text_meta_hover_started"]
